<resources>
    <string name="app_name">EduMeet</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Ezarpenak</string>

    <string name="menu_home">Hasiera</string>
    <string name="menu_reuniones">Bilerak</string>
    <string name="menu_horario">Ordutegia</string>

    <string-array name="dias_semana">
        <item>lunes</item>
        <item>martes</item>
        <item>miercoles</item>
        <item>jueves</item>
        <item>viernes</item>
    </string-array>
    <string name="fecha">"Data: "</string>
    <string name="hora">"Ordua: "</string>
    <string name="sala">"Ikasgela: "</string>
    <string name="participantes">Partaideak:</string>
    <string name="salir">IRTEN</string>
    <string name="misReuniones">Nire Bilerak</string>
    <string name="horaInicio">AUTATU HASTEKO ORDUA</string>
    <string name="horaFin">AUTATU BUKATZEKO ORDUA</string>
    <string name="miHorario">Nire Ordutegia</string>
    <string name="select_asignatura">Gai bat autatu</string>
    <string name="guardarhorario">ORDUTEGIA GORDE</string>
    <string name="bilera">Bilera</string>
    <string name="tema">Gaia:</string>
    <string name="rTema">Idatzi bileraren gaia</string>
    <string name="guardar">GORDE</string>
    <string name="unirse">BATU</string>
    <string name="cerrarS">SAIOA AMAITU</string>
    <string name="cambiarIdioma">HIZKUNTZA ALDATU</string>
    <string name="nombre">Izena</string>
    <string name="contraseña">Pasahitza</string>
    <string name="confContraseña">Berretzi Pasahitza</string>
    <string name="registrarse">ERREGISTRATU</string>
    <string name="iniciarS">SAIOA HASI</string>
    <string name="noCuenta">¿Ez al duzu konturik? izena eman!</string>
    <string name="salida_exito">Irten zara bileratik</string>
    <string name="entrada_exito">Errorea irtetean</string>
    <string name="salida_error">errore bat gertatu da</string>
    <string name="unido_error">Errorea bilerara batzean:</string>
    <string name="unido_exito">Arrakastaz batu zara bileran.</string>
    <string name="buscando_horario">Ordu berria bilatzen...</string>
    <string name="horario_exito">Ordutegia eguneratua honetara:</string>
    <string name="horario_no_encontrado">Ez da ordutegi alternatiborik aurkitu.</string>
    <string name="horario_error">Errorea ordutegia bilatzean:</string>
    <string name="salida_preparar_error">Errorea bileratik irteteko prestaketan:</string>
    <string name="reunionesunidas_error_sesion">Ez da saioa behar bezala hasi</string>
    <string name="reunionesunidas_no_hay">Ez zaude bilera bakar batean ere izena emanda</string>
    <string name="reunionesunidas_error_ui">Errorea interfazea eguneratzean</string>
    <string name="reunionesunidas_error_carga">Errorea bilerak kargatzean</string>
    <string name="login_campos_vacios">Bete dena mezedez</string>
    <string name="login_exito">Saio-Hasia</string>
    <string name="login_error_generico">Saioa hasterakoan errorea: %1$s</string>
    <string name="misreuniones_dialogo_titulo">Bilera ezabatu</string>
    <string name="misreuniones_dialogo_mensaje">Ziur zaude bilera hau ezabatu nahi duzula?</string>
    <string name="misreuniones_eliminada">Bilera ezabatuta</string>
    <string name="misreuniones_error_eliminar">Errorea bilera ezabatzean</string>
    <string name="misreuniones_error_eliminar_relaciones">Errorea erlazioak ezabatzean</string>
    <string name="misreuniones_error_sesion">Ezin izan da irakaslearen IDa lortu</string>
    <string name="misreuniones_error_carga">Errorea bilerak kargatzean</string>
    <string name="horario_dialogo_titulo">Ordutegia ezabatu</string>
    <string name="horario_dialogo_mensaje">Ziur zaude ordutegi hau ezabatu nahi duzula?</string>
    <string name="horario_eliminado">Ordutegia ondo ezabatuta</string>
    <string name="horario_error_eliminar">Errorea ordutegia ezabatzean</string>
    <string name="horario_error_id_invalido">Errorea: irakaslearen ID baliogabea</string>
    <string name="horario_error_login">Errorea: saioa behar bezala hasi gabe</string>
    <string name="horario_error_carga_asignaturas">Errorea ikasgaiak kargatzean</string>
    <string name="horario_error_guardar">Errorea ordutegia gordetzean</string>
    <string name="horario_seleccionar_asignatura">Hautatu ikasgai bat</string>
    <string name="horario_inicio_hora">Hasiera: %1$s</string>
    <string name="horario_fin_hora">Amaiera: %1$s</string>
    <string name="horario_guardado">Ordutegia gordeta</string>
    <string name="error_sesion">Errorea: ezin izan da saioa berreskuratu</string>
    <string name="titulo_eliminar_horario">Ordutegia ezabatu</string>
    <string name="confirmacion_eliminar_horario">Ziur zaude ordutegi hau ezabatu nahi duzula?</string>
    <string name="si">Bai</string>
    <string name="no">Ez</string>
    <string name="error_eliminar_horario">Errorea ordutegia ezabatzean: %1$s</string>
    <string name="asignatura_desconocida">Gai ezezaguna</string>
    <string name="error_cargar_asignaturas">Errorea gaiak kargatzean</string>
    <string name="debes_seleccionar_asignatura">Gai bat aukeratu behar duzu</string>
    <string name="error_guardar_horario">Errorea ordutegia gordetzean</string>
    <string name="inicio">Hasiera:</string>
    <string name="fin">Amaiera:</string>
    <string name="error_id_profesor">Errorea: irakaslearen ID baliogabea</string>
    <string name="asignatura">Gaia</string>
    <string name="error_cargar_horario">Errorea ordutegia kargatzean</string>
    <string name="usuario">Erabiltzaile izena</string>
    <string name="error_fill_all_fields">Mesedez, bete ezazu eremu guztiak</string>
    <string name="login_successful">Saioa arrakastaz hasi da</string>
    <string name="error_incorrect_password">Pasahitza ez da zuzena</string>
    <string name="error_user_not_found">Erabiltzailea ez da aurkitu</string>
    <string name="error_processing_response">Errorea erantzuna prozesatzerakoan</string>
    <string name="error_generic">Errorea: </string>
    <string name="error_invalid_email">E-posta helbide ez baliogarria</string>
    <string name="error_passwords_not_match">Pasahitzak ez datoz bat</string>
    <string name="error_password_requirements">Pasahitzak gutxienez 8 karaktere izan behar ditu, batez beste, letra larri bat, letra xehe bat eta zenbaki bat.</string>
    <string name="error_processing_departments">Errorea departamentuak prozesatzerakoan</string>
    <string name="error_loading_departments">Errorea departamentuak kargatzerakoan</string>
    <string name="registration_successful">Erregistroa arrakastatsua</string>
    <string name="reuniones_creadas">Sortutako Bilerak</string>
    <string name="reuniones_unidas">Sartu Zaren Bilerak</string>
    <string name="cargando_estado">kargatzen</string>


    <!-- Egunak -->
    <string name="lunes">astelehena</string>
    <string name="martes">asteartea</string>
    <string name="miercoles">asteazkena</string>
    <string name="jueves">osteguna</string>
    <string name="viernes">ostirala</string>


    <!-- Generikoak -->
    <string name="general_no">Ez</string>
    <string name="general_si">Bai</string>
    <string name="general_cancelar">Utzi</string>
    <string name="email" translatable="false">email</string>

</resources>
