<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="6dp"
    android:radius="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvTema"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tema"
            android:textColor="#7F7C70"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha"
            android:textColor="#7F7C70" />

        <TextView
            android:id="@+id/tvHora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hora"
            android:textColor="#7F7C70" />

        <TextView
            android:id="@+id/tvSala"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sala"
            android:textColor="#7F7C70" />

        <TextView
            android:id="@+id/tvParticipantes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/participantes"
            android:textColor="#7F7C70" />

        <Button
            android:id="@+id/btnUnirse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="#7655A3"
            android:text="@string/unirse" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
