<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/tituloDialogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bilera"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/temaLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tema"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tituloDialogo"
        app:layout_constraintBaseline_toBaselineOf="@id/temaEditText"/>

    <EditText
        android:id="@+id/temaEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:hint="@string/rTema"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/temaLabel"
        app:layout_constraintTop_toBottomOf="@id/tituloDialogo" />

    <TextView
        android:id="@+id/fechaLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fecha"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/temaEditText"/>

    <EditText
        android:id="@+id/fechaEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="YYYY-MM-DD"
        android:inputType="date"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/temaEditText"
        app:layout_constraintStart_toEndOf="@id/fechaLabel"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/horaLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hora"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fechaEditText"/>

    <EditText
        android:id="@+id/horaEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="HH:MM"
        android:inputType="time"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/fechaEditText"
        app:layout_constraintStart_toEndOf="@id/horaLabel"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/salaLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sala"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horaEditText"
        app:layout_constraintBaseline_toBaselineOf="@id/salaSpinner"/>

    <Spinner
        android:id="@+id/salaSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/horaEditText"
        app:layout_constraintStart_toEndOf="@id/salaLabel"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="#009688"
        android:text="@string/guardar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/salaSpinner" />
</androidx.constraintlayout.widget.ConstraintLayout>
