<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="email"
        android:inputType="textEmailAddress"
        android:text="aimar@gmail.com"
        android:textColor="#7F7C70 " />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/contraseña"
        android:inputType="textPassword"
        android:text="a"
        android:textColor="#7F7C70 " />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#7655A3"
        android:text="@string/iniciarS" />

    <TextView
        android:id="@+id/textViewRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/noCuenta"
        android:textColor="#7655A3"
        android:textColorHighlight="#7655A3"
        android:textColorLink="#7655A3" />

</LinearLayout>